# free-genai-bootcamp-2025

./: .gitignore  README.md  hello.py  pyproject.toml
.cursor/rules/: flask.mdc  sqlite3.mdc
agent/: README.md
agent/german_song_generator/: README.md  pyproject.toml
agent/german_song_generator/src/german_song_generator/: crew.py  main.py
agent/german_song_generator/src/german_song_generator/config/: agents.yaml  tasks.yaml
agent/german_song_generator/src/german_song_generator/tools/: lyrics_tools.py
fast-portal/: backend-techspec.md
genai-architecting/: ConceptualDesign.md  DataStrategy.md  README.md  Readme.md  Readme.me  Requirements.md  SystemContext.md
implementing_ML/: implementing_ML.ipynb
lang-portal/: Readme-vocab-importer.md  Readme-writing-practice.md  Readme.md  requirements.txt
lang-portal/backend-flask/: .gitignore  app.py  kana_dictionary.py
language-learning-assistant/: README.md
language-learning-assistant/backend/: chat.py  get_transcript.py  structured_data.py  vector_database.py
language-learning-assistant/frontend/: main.py
language-learning-assistant/structured/: mLUTv35RigE.json
opea-comps/: docker-compose.yml  readme-coderabbit.md  readme.md
opea-comps/mega-service/: chat.py  docker-compose.yaml  mega.py  readme.md  (+1 more)
plans/: study_sessions_post.md
reiseabenteuer/: MyRequests.http  clear_vocabulary_db.py  destinations.py  german_vocabulary_api.py  image_generation_api.py  initialize_vocabulary_db.py  main.py  pronunciation_api.py  readme.md  stable_diffusion_test.py  tech-spec.md  travel_api.py  whisper_test.py
(+31 files in other folders)
