[project]
name = "german_song_generator"
version = "0.1.0"
description = "german_song_generator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
german_song_generator = "german_song_generator.main:run"
run_crew = "german_song_generator.main:run"
train = "german_song_generator.main:train"
replay = "german_song_generator.main:replay"
test = "german_song_generator.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
